--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>European Voters Analysis</title><link id="favicon" rel="shortcut icon" type="image/x-icon" href="https://github.com/pessini/pessini/blob/main/img/jupyter-logo.png?raw=true"><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>European Voters Analysis</title>
+<link rel="shortcut icon" href="/img/favicon.ico?raw=true" type="image/x-icon">
+<link rel="icon" href="/img/favicon.ico?raw=true" type="image/x-icon">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
