--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>European Voters Analysis</title>
-<link rel="shortcut icon" href="/img/favicon.ico?raw=true" type="image/x-icon">
-<link rel="icon" href="/img/favicon.ico?raw=true" type="image/x-icon">
+<link rel="shortcut icon" href="https://github.com/pessini/european-voters/blob/main/img/favicon.icoraw=true" type="image/x-icon">
+<link rel="icon" href="https://github.com/pessini/european-voters/blob/main/img/favicon.ico?raw=true" type="image/x-icon">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
