--- a/index.html
+++ b/index.html
@@ -14382,7 +14382,7 @@ since 2014.</p>
 <li>ISCED 7: Master’s or equivalent level</li>
 <li>ISCED 8: Doctoral or equivalent level</li>
 </ul>
-<p>More info about ISCED can be found <a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/International_Standard_Classification_of_Education_(ISCED">here</a>).</p>
+<p>More info about ISCED can be found <a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/International_Standard_Classification_of_Education_(ISCED)">here</a>.</p>
 
 </div>
 </div>
