--- a/index.html
+++ b/index.html
@@ -14259,7 +14259,7 @@ a.anchor-link {
 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img title="GitHub Octocat" src='https://github.com/pessini/european-voters/blob/main/img/Octocat.jpg?raw=true' style='height: 60px; padding-right: 15px' alt="Octocat" align="left"> This notebook is part of a GitHub repository: <a href="https://github.com/pessini/european-voters">https://github.com/pessini/european-voters</a> 
+<p><img title="GitHub Octocat" src='./img/Octocat.jpg?raw=true' style='height: 60px; padding-right: 15px' alt="Octocat" align="left"> This notebook is part of a GitHub repository: <a href="https://github.com/pessini/european-voters">https://github.com/pessini/european-voters</a> 
 <br>MIT Licensed
 <br>Author: Leandro Pessini</p>
 
@@ -14272,7 +14272,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src='https://www.irishtimes.com/polopoly_fs/1.3657023.1539082433!/image/image.jpg' style='height:400px'/></p>
+<p><img src='./img/brexit.jpeg' style='height:400px'/></p>
 
 </div>
 </div>
@@ -24520,7 +24520,7 @@ height=600
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><strong>Northern</strong> and <strong>Southern</strong> are the European regions with the <strong>highest EU rejection</strong> rate, each of them marking 14% of voting intentions to Leave the Brussels-based institution.</p>
+<p><strong>Northern</strong> and <strong>Southern</strong> are the European regions with the <strong>highest EU rejection</strong> rate, each of them marking 14% voting intentions to Leave the Brussels-based institution.</p>
 <p>Curiously, those regions are also home to 4 countries that have the highest voting intention to Remain.</p>
 <p>Countries with the happiest citizens regarding the EU:</p>
 <ol>
@@ -38122,7 +38122,7 @@ height=600
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Latvia and Spain</strong> are the only EU Countries with an <strong>unemployment</strong> rate higher than <strong>40%</strong>. More than half (14 of 22) of countries have reported an unemployment rate between 20% and 30%.</p>
-<p>It is important to highlight that <strong>Hungary</strong> presented the lowest unemployment rate of all countries studied with an unemployment rate of 13%, 8% less than the two second-better-scored countries Czechia and Slovakia.</p>
+<p>It is important to highlight that <strong>Hungary</strong> presented the lowest unemployment rate of all countries surveyed at 13%, 8% less than the two second-better-scored countries Czechia and Slovakia.</p>
 <p><strong>Did something happen in Hungary?</strong> In order to understand Hungary's excellent performance, online research was conducted.</p>
 <p>The employment gap in Hungary has improved  in recent years, partly thanks to strong economic growth and possibly also as a result of the 2013 Job Protection Act which provides tax incentives to employers who hire people with a weak connection to the labour market. Recently, the government announced a <a href="http://abouthungary.hu/news-in-brief/new-labor-program-significantly-cuts-hungarys-unemployment-rate/">new labor program</a> and according to the Minister of Finance, since 2010 around 500,000 previously inactive workers have been returned to the labor market.</p>
 
@@ -47160,7 +47160,7 @@ Number of Fisher Scoring iterations: 5
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>The analysis has demonstrated that the majority of countries are happy with the EU showing 68% are in favor and 32% not so happy. Some regions have more positive views than others and Southern European countries have more positive views towards the EU.</p>
 <p>Also, that younger Europeans are happier than their older counterparts showing that only 9.5% of young citizens (ages 20 and younger) have a negative view of the EU.</p>
-<p>The unemployment rate was presented higher in Southern Region where countries were more affected by the debt crisis and Hungary with a new labor program was able to lower the unemployment rate at an incredible 13%. Additionally, unemployed voters are more inclined to vote for their country to leave the EU as 40% of unhappy respondents were unemployed in comparison with 30% among happy voters.</p>
+<p>The unemployment rate was presented higher in Southern Region where countries were more affected by the debt crisis and Hungary with a new labor program was able to lower the unemployment rate at an incredible 13%. Additionally, unemployed voters are more inclined to vote for their country to leave the EU as 40% of unhappy respondents were unemployed in comparison to 30% among happy voters.</p>
 <p>Union membership did not show to play an important role in influencing European voters. However, a significant discovery was possible showing that Nordic countries have the highest union density in Europe at 64%.</p>
 <p>In an educational context, the High education level is 14% higher than those with Remain-voting intention. The medium Education level represents more than 50% and Low and Medium Education level are the vast majority representing 90% of those voters.</p>
 <p>Finally, using a Logistic Regression model to investigate the relation between Education and voting intentions, it was detected that Higher educated Europeans are generally keener on the EU which means that the probability for a European to vote for their country to leave the EU decreases as they get more educated.</p>
