Add tag Google Analytics

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 
 <title>European-Voters-Analysis</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G7Z6TT8G68"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-G7Z6TT8G68');
+</script>
 
 
 <style type="text/css">
